<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.amontes.johnnysproject.EasterEggActivity">

    <ImageView
        android:contentDescription="@string/easter_egg_activity_descrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/johnny_five"/>

    <TextView
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_disasemble"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easter_button_back_text"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
